--- a/css/inic_sesion.css
+++ b/css/inic_sesion.css
@@ -88,7 +88,7 @@ button {
 }
 
 button:hover {
-  background-color: #6B9071; /* Hover del botón */
+  background-color: #0F2A1D; /* Hover del botón */
 }
 
 .welcome-message {
